Remove IE fix (it worked, but only on IE)

--- a/css/leaflet.css
+++ b/css/leaflet.css
@@ -80,7 +80,7 @@
 	pointer-events: none;
 	}
 .leaflet-top {
-	top: 50px;
+	top: 0;
 	}
 .leaflet-right {
 	right: 0;
